Add database and Amazon S3 to infrastructure

--- a/src/Storefront.Ordering.API/appsettings.json
+++ b/src/Storefront.Ordering.API/appsettings.json
@@ -1,8 +1,30 @@
 {
   "AllowedHosts": "*",
+  "AmazonS3": {
+    "AccessKeyId": "",
+    "SecretAccessKey": "",
+    "BucketName": "",
+    "Region": ""
+  },
+  "Authorization": {
+    "Issuer": "",
+    "Audience": "",
+    "Key": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
+    }
+  },
+  "ConnectionString": {
+    "PostgreSQL": ""
+  },
+  "Sentry": {
+    "Dsn": "",
+    "IncludeRequestPayload": true,
+    "IncludeActivityData": true,
+    "Logging": {
+      "MinimumBreadcrumbLevel": "Warning"
     }
   }
 }
