Configure JWT authentication

--- a/src/Storefront.Ordering.API/appsettings.json
+++ b/src/Storefront.Ordering.API/appsettings.json
@@ -9,7 +9,7 @@
   "Authorization": {
     "Issuer": "",
     "Audience": "",
-    "Key": ""
+    "Secret": ""
   },
   "Logging": {
     "LogLevel": {
