Add AWS and EF packages to API project

--- a/src/Storefront.Ordering.API/Storefront.Ordering.API.csproj
+++ b/src/Storefront.Ordering.API/Storefront.Ordering.API.csproj
@@ -4,11 +4,11 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.3.102.23" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Storefront.Ordering.Domain\Storefront.Ordering.Domain.csproj" />
-    <ProjectReference Include="..\Storefront.Ordering.Infrastructure\Storefront.Ordering.Infrastructure.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.4" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.4" />
   </ItemGroup>
 </Project>
