Refactor authorization classes

--- a/src/Storefront.Ordering.API/appsettings.json
+++ b/src/Storefront.Ordering.API/appsettings.json
@@ -6,7 +6,7 @@
     "BucketName": "",
     "Region": ""
   },
-  "Authorization": {
+  "Auth": {
     "Issuer": "",
     "Audience": "",
     "Secret": ""
